--- a/tools/solid/package.json
+++ b/tools/solid/package.json
@@ -17,7 +17,8 @@
     "cli-columns": "^4.0.0",
     "commander": "^9.0.0",
     "http-link-header": "^1.0.4",
-    "mime-types": "^2.1.35"
+    "mime-types": "^2.1.35",
+    "node-fetch": "^2.6.7"
   },
   "devDependencies": {
     "@types/node": "^17.0.22"
