--- a/tools/solid/package.json
+++ b/tools/solid/package.json
@@ -18,7 +18,8 @@
     "commander": "^9.0.0",
     "http-link-header": "^1.0.4",
     "mime-types": "^2.1.35",
-    "node-fetch": "^2.6.7"
+    "node-fetch": "^2.6.7",
+    "tiny-queue": "^0.2.1"
   },
   "devDependencies": {
     "@types/node": "^17.0.22"
