--- a/tools/solid/package.json
+++ b/tools/solid/package.json
@@ -7,14 +7,17 @@
     "solid-tools": "bin/solid.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rm -r dist/ ; tsc"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@comunica/query-sparql": "^2.1.0",
     "@inrupt/solid-client": "^1.21.0",
     "chalk": "^4.1.2",
     "cli-columns": "^4.0.0",
+    "cli-table3": "^0.6.1",
     "commander": "^9.0.0",
     "http-link-header": "^1.0.4",
     "mime-types": "^2.1.35",
@@ -22,6 +25,6 @@
     "tiny-queue": "^0.2.1"
   },
   "devDependencies": {
-    "@types/node": "^17.0.22"
+    "@types/node": "^17.0.23"
   }
 }
