--- a/tools/css/package.json
+++ b/tools/css/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.3",
     "getmac": "^5.20.0",
     "inquirer": "^8.2.2",
+    "jose": "^4.7.0",
     "open": "^8.4.0",
     "set-cookie-parser": "^2.4.8"
   },
