--- a/bashlib/css/package.json
+++ b/bashlib/css/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@types/crypto-js": "^4.1.1",
-    "@types/set-cookie-parser": "^2.4.2"
+    "@types/set-cookie-parser": "^2.4.2",
+    "typescript": "^4.6.4"
   }
 }
