--- a/bashlib/solid/package.json
+++ b/bashlib/solid/package.json
@@ -26,6 +26,7 @@
     "tiny-queue": "^0.2.1"
   },
   "devDependencies": {
-    "@types/node": "^17.0.23"
+    "@types/node": "^17.0.23",
+    "typescript": "^4.6.4"
   }
 }
