--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "solid-bashlib",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "",
   "main": "dist/index.js",
   "bin": {
-    "solid-tools": "bin/solid.js"
+    "sld": "bin/solid.js",
+    "solid": "bin/solid.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
