--- a/package.json
+++ b/package.json
@@ -15,32 +15,31 @@
   "dependencies": {
     "@comunica/query-sparql": "^2.1.0",
     "@inrupt/solid-client": "^1.21.0",
+    "@inrupt/solid-client-authn-node": "^1.11.7",
     "chalk": "^4.1.2",
     "cli-columns": "^4.0.0",
     "cli-select": "^1.1.2",
     "cli-table": "^0.3.11",
     "commander": "^9.0.0",
-    "http-link-header": "^1.0.4",
-    "inquirer": "^8.2.4",
-    "md5": "^2.3.0",
-    "mime-types": "^2.1.35",
-    "node-fetch": "^2.6.7",
-    "tiny-queue": "^0.2.1",
-    "@inrupt/solid-client-authn-node": "^1.11.7",
     "cookie-session": "^2.0.0",
     "express": "^4.17.3",
     "form-urlencoded": "^6.0.6",
     "getmac": "^5.20.0",
+    "http-link-header": "^1.0.4",
+    "inquirer": "^8.2.4",
     "jose": "^4.7.0",
     "jwt-decode": "^3.1.2",
+    "md5": "^2.3.0",
+    "mime-types": "^2.1.35",
+    "node-fetch": "^2.6.7",
     "open": "^8.4.0",
-    "set-cookie-parser": "^2.4.8"
+    "set-cookie-parser": "^2.4.8",
+    "tiny-queue": "^0.2.1"
   },
   "devDependencies": {
-    "@types/inquirer": "^8.2.1",
-    "@types/node": "^17.0.23",
-    "typescript": "^4.6.4",
     "@types/crypto-js": "^4.1.1",
-    "@types/set-cookie-parser": "^2.4.2"
+    "@types/inquirer": "^8.2.1",
+    "@types/set-cookie-parser": "^2.4.2",
+    "typescript": "^4.9.3"
   }
 }
