--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cookie-session": "^2.0.0",
     "cross-fetch": "^3.1.5",
     "express": "^4.17.3",
+    "fetch-blob": "^2.1.1",
     "form-urlencoded": "^6.0.6",
     "getmac": "^5.20.0",
     "http-link-header": "^1.0.4",
