--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "dist/index.js",
   "bin": {
-    "solid-tools": "bin/solid.js"
+    "solid-tools": "bin/solid.js",
+    "sld": "bin/solid.js",
+    "solid-css": "bin/solid-dev.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
