--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rm -rf dist/ && tsc",
     "prepare": "npm run build",
-    "release": "release-it"
+    "release": "release-it",
+    "mkdocs": "npm run mkdocs:docker || npm run mkdocs:pip",
+    "mkdocs:docker": "docker run --rm -it -p 8000:8000 -v ${PWD}/documentation:/docs squidfunk/mkdocs-material",
+    "mkdocs:pip": "pip install mkdocs mkdocs-material && cd documentation && mkdocs serve",
+    "typedocs": "typedoc --customCss ./documentation/typedoc.css"
   },
   "author": "",
   "license": "ISC",
@@ -46,6 +50,7 @@
     "@types/inquirer": "^8.2.1",
     "@types/set-cookie-parser": "^2.4.2",
     "release-it": "^15.5.0",
+    "typedoc": "^0.23.27",
     "typescript": "^4.9.3"
   }
 }
