--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -80,6 +80,7 @@ nav:
       - Overview: usage/overview.md
       - CLI:
           - Overview: usage/cli/overview.md
+          - Environment Variables: usage/cli/environment-variables.md
           - Authentication: usage/cli/authentication.md
           - Example requests: usage/cli/example-requests.md
           - Metadata: usage/cli/metadata.md
@@ -92,6 +93,6 @@ nav:
           - CSS specific features: usage/typescript/css-specific.md
   - Contributing:
       - Pull requests: contributing/making-changes.md
-  - API: ./docs/" target="_blank_blank
+  - API: ./typedocs/" target="_blank_blank
 # To write documentation locally, execute the next line and browse to http://localhost:8000
 # npm run mkdocs
