studentjob:commit, so that i can pull the changes ruben made right now

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "rm -rf dist/ && tsc",
     "prepare": "npm run build",
     "release": "release-it",
-    "mkdocs":"pip install mkdocs mkdocs-material && cd docs && mkdocs serve",
+    "mkdocs":"pip install mkdocs mkdocs-material && mkdocs serve",
     "typedocs": "typedoc --customCss ./documentation/typedoc.css",
     "updatesite": "npm run typedocs; mkdocs gh-deploy -f documentation/mkdocs.yml"
   },
