Fix: trying to fix API documentation for site

--- a/.github/workflows/mkdocs.yml
+++ b/.github/workflows/mkdocs.yml
@@ -51,7 +51,7 @@ jobs:
       - run: git fetch origin gh-pages --depth=1
       - run: |
           cd documentation && mike deploy --push --update-aliases \
-            ${{ needs.mkdocs-prep.outputs.major }}.x latest
+            typedocs latest
 
   typedocs:
     # Build typedocs and publish them to the GH page.
