--- a/documentation/mkdocs.yml
+++ b/documentation/mkdocs.yml
@@ -73,6 +73,7 @@ extra:
 nav:
   - Welcome:
       - README.md
+  - Tutorial: tutorial.md
   - Documentation:
       - Overview: documentation/overview.md
       - CLI:
@@ -80,15 +81,15 @@ nav:
           - Manage Authentication: documentation/cli/authentication.md
           - Available Commands: documentation/cli/commands.md
           - Manage Resource Access: documentation/cli/authentication.md
+          - Using Aliases: documentation/cli/aliases.md
       # - Typescript:
       #     - Overview: usage/typescript/overview.md
       #     - Authentication: usage/typescript/authentication.md
       #     - Example requests: usage/typescript/example-requests.md
       #     - Metadata: usage/typescript/metadata.md
       #     - CSS specific features: usage/typescript/css-specific.md
-  - Tutorial: tutorial.md
-  - Contributing:
-      - Pull requests: contributing/making-changes.md
+  # - Contributing:
+  #     - Pull requests: contributing/making-changes.md
   # - API: ./typedocs/" target="_blank_blank
 # To write documentation locally, execute the next line and browse to http://localhost:8000
 # npm run mkdocs
