--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
   "name": "solid-bashlib",
-  "version": "0.5.0",
+  "version": "0.5.5",
   "description": "",
   "main": "dist/index.js",
   "bin": {
-    "solid-tools": "bin/solid.js",
-    "sld": "bin/solid.js",
-    "solid-css": "bin/solid-dev.js"
+    "sld": "bin/solid.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
