fixed unused imports. Removed fetch-blob dep because of problems with bundling

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rm -rf dist/ && tsc",
-    "prepare": "npm run build",
+    "bundle": "npx esbuild bin/solid.js --bundle --platform=node --outfile=bin/bundled.js",
+    "prepare": "npm run build; npm run bundle",
     "release": "release-it",
     "mkdocs": "pip install mkdocs mkdocs-material && mkdocs serve -f documentation/mkdocs.yml",
     "typedocs": "typedoc --customCss ./documentation/typedoc.css",
@@ -27,12 +28,10 @@
     "cli-select": "^1.1.2",
     "cli-table": "^0.3.11",
     "commander": "^13.0.0",
-    "cookie-session": "^2.0.0",
     "cross-fetch": "^3.1.5",
     "express": "^4.17.3",
     "fetch-blob": "^2.1.1",
     "form-urlencoded": "^6.0.6",
-    "getmac": "^5.20.0",
     "http-link-header": "^1.0.4",
     "inquirer": "^8.2.4",
     "jose": "^4.7.0",
@@ -40,13 +39,12 @@
     "md5": "^2.3.0",
     "mime-types": "^2.1.35",
     "open": "^8.4.0",
-    "set-cookie-parser": "^2.4.8",
-    "tiny-queue": "^0.2.1"
+    "set-cookie-parser": "^2.4.8"
   },
   "devDependencies": {
-    "@types/crypto-js": "^4.1.1",
+    "@types/express": "^5.0.1",
     "@types/inquirer": "^8.2.1",
-    "@types/set-cookie-parser": "^2.4.2",
+    "@types/mime-types": "^2.1.4",
     "live-server": "^1.2.2",
     "release-it": "^15.5.0",
     "typedoc": "^0.23.27",
